@@ -139,7 +139,11 @@ accept(int sockfd,struct sockaddr *cliaddr,int *addrlen)
 
 	__stdio_unlock();
 
-	__delete_semaphore(lock);
+	#if defined(__THREAD_SAFE)
+	{
+		__delete_semaphore(lock);
+	}
+	#endif /* __THREAD_SAFE */
 
 	if(__check_abort_enabled)
 		__check_abort();
