@@ -139,8 +139,12 @@ fclose(FILE *stream)
 	if(file->iob_CustomBuffer != NULL)
 		free(file->iob_CustomBuffer);
 
-	/* Free the lock semaphore now. */
-	__delete_semaphore(file->iob_Lock);
+	#if defined(__THREAD_SAFE)
+	{
+		/* Free the lock semaphore now. */
+		__delete_semaphore(file->iob_Lock);
+	}
+	#endif /* __THREAD_SAFE */
 
 	memset(file,0,sizeof(*file));
 
